HUDF-489: Let's just go back to where we were before I tried to fix the overflow sorry @jcheungfc

--- a/FJSHUD/app/styles/widget.less
+++ b/FJSHUD/app/styles/widget.less
@@ -137,8 +137,6 @@
   span.ChatStatus{
      font-weight: normal !important;
      font-size: 0.875em;
-     text-overflow: ellipsis;
-     white-space: nowrap;
   }
   .XIcon-ChatStatus-offline,
   .XIcon-ChatStatus-away,
